Added format string to captures. No longer returning wh_secretkey from GET requests.
